--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">Hyunseo Kim</p>
-                <p>I'm a master's student at 
+                <p>I'm a MS student at 
                   <a href="https://diyonsei.notion.site/diyonsei/Data-Language-Intelligence-Lab-Yonsei-University-7e121249362f42c2bdd1328aeaeb5f4b">DLI Lab</a>, 
                   advised by Professor <a href="https://donalee.github.io/">Dongha Lee</a>.
                 </p>
@@ -32,7 +32,7 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/profile.jpg">
+                <a href="images/hyunseo/profile.jpg">
                   <img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/profile.jpg">
                 </a>
               </td>
@@ -45,7 +45,7 @@
               <td style="padding:16px;width:100%;vertical-align:middle">
                 <h2>Research</h2>
                 <p>
-                  My current research interest lies in real-world applications of large language models (LLMs), especially in the area of personalized recommendation.
+                  My current research interest lies in real-world applications of large language models (LLMs), especially in the area of Personalized Recommendation and Information Retrieval.
                 </p>
               </td>
             </tr>
