--- a/index.html
+++ b/index.html
@@ -32,8 +32,8 @@
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
-                <a href="images/hyunseo/profile.jpg">
-                  <img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/profile.jpg">
+                <a href="images/hyunseo/profile.JPG">
+                  <img style="width:100%;max-width:100%;object-fit: cover; border-radius: 50%;" alt="profile photo" src="images/hyunseo/profile.JPG">
                 </a>
               </td>
             </tr>
