--- a/index.html
+++ b/index.html
@@ -53,27 +53,11 @@
 
           <!-- Publications -->
           <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
-
-            <!-- Pearl Paper -->
-            <tr>
-              <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/pearl.jpg" width="160"/>
-              </td>
-              <td style="padding:8px;width:80%;vertical-align:middle">
-                <span class="papertitle">Pearl: A Review-driven Persona-Knowledge Grounded Conversational Recommendation Dataset</span><br/>
-                Minjin Kim, Minju Kim, Hana Kim, Beong-woo Kwak, Soyeon Chun, <strong>Hyunseo Kim</strong>, SeongKu Kang, Youngjae Yu, Jinyoung Yeo, Dongha Lee<br/>
-                <em>Findings of ACL</em>, 2024<br/>
-                <a href="https://arxiv.org/abs/2403.04460">arXiv</a>
-                <p>
-                  We introduce Pearl, a novel dataset for persona and knowledge-grounded conversational recommendation. The dataset leverages user reviews to simulate natural and informative dialogue interactions, enabling more personalized and context-aware recommendation systems.
-                </p>
-              </td>
-            </tr>
-
+            
             <!-- SIGIR Paper -->
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/sigir.jpg" width="160"/>
+                <img src="images/hyunseo/EXP3RT.png" width="160"/>
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <span class="papertitle">Review-driven Personalized Preference Reasoning with Large Language Models for Recommendation</span><br/>
@@ -86,6 +70,23 @@
               </td>
             </tr>
 
+            <!-- Pearl Paper -->
+            <tr>
+              <td style="padding:16px;width:20%;vertical-align:middle">
+                <img src="images/hyunseo/PEARL.png" width="160"/>
+              </td>
+              <td style="padding:8px;width:80%;vertical-align:middle">
+                <span class="papertitle">Pearl: A Review-driven Persona-Knowledge Grounded Conversational Recommendation Dataset</span><br/>
+                Minjin Kim, Minju Kim, Hana Kim, Beong-woo Kwak, Soyeon Chun, <strong>Hyunseo Kim</strong>, SeongKu Kang, Youngjae Yu, Jinyoung Yeo, Dongha Lee<br/>
+                <em>Findings of ACL</em>, 2024<br/>
+                <a href="https://arxiv.org/abs/2403.04460">arXiv</a>
+                <p>
+                  We introduce Pearl, a novel dataset for persona and knowledge-grounded conversational recommendation. The dataset leverages user reviews to simulate natural and informative dialogue interactions, enabling more personalized and context-aware recommendation systems.
+                </p>
+              </td>
+            </tr>
+
+            
           </tbody></table>
 
           <!-- Footer -->
