--- a/index.html
+++ b/index.html
@@ -19,8 +19,9 @@
             <tr style="padding:0px">
               <td style="padding:2.5%;width:63%;vertical-align:middle">
                 <p class="name" style="text-align: center;">Hyunseo Kim</p>
-                <p>I'm a MS student at Yonsei University, 
-                  <a href="https://diyonsei.notion.site/diyonsei/Data-Language-Intelligence-Lab-Yonsei-University-7e121249362f42c2bdd1328aeaeb5f4b">DLI Lab</a>, 
+                <p>I'm a MS student in
+                  <a href="https://diyonsei.notion.site/diyonsei/Data-Language-Intelligence-Lab-Yonsei-University-7e121249362f42c2bdd1328aeaeb5f4b">Data & Language Intelligence Lab</a> 
+                  at <a href="https://www.yonsei.ac.kr/sc/index.jsp">Yonsei University</a>, 
                   advised by Professor <a href="https://donalee.github.io/">Dongha Lee</a>.
                 </p>
                 <p style="text-align:center">
@@ -64,9 +65,6 @@
                 Jieyong Kim*, <strong>Hyunseo Kim</strong>*, Hyunjin Cho, SeongKu Kang, Buru Chang, Jinyoung Yeo, Dongha Lee<br/>
                 <em>SIGIR</em>, 2025<br/>
                 <a href="https://arxiv.org/abs/2408.06276">Paper</a>
-<!--                 <p>
-                  This paper proposes a method that leverages large language models to infer personalized preferences from user reviews. Our approach enables accurate and interpretable reasoning in recommendation scenarios, pushing the boundaries of review-based recommendation.
-                </p> -->
               </td>
             </tr>
 
@@ -78,11 +76,8 @@
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <span class="papertitle">Pearl: A Review-driven Persona-Knowledge Grounded Conversational Recommendation Dataset</span><br/>
                 Minjin Kim, Minju Kim, Hana Kim, Beong-woo Kwak, Soyeon Chun, <strong>Hyunseo Kim</strong>, SeongKu Kang, Youngjae Yu, Jinyoung Yeo, Dongha Lee<br/>
-                <em>Findings of ACL</em>, 2024<br/>
+                <em>ACL Findings</em>, 2024<br/>
                 <a href="https://arxiv.org/abs/2403.04460">Paper</a>
-<!--                 <p>
-                  We introduce Pearl, a novel dataset for persona and knowledge-grounded conversational recommendation. The dataset leverages user reviews to simulate natural and informative dialogue interactions, enabling more personalized and context-aware recommendation systems.
-                </p> -->
               </td>
             </tr>
 
