--- a/index.html
+++ b/index.html
@@ -23,6 +23,7 @@
                   <a href="https://diyonsei.notion.site/diyonsei/Data-Language-Intelligence-Lab-Yonsei-University-7e121249362f42c2bdd1328aeaeb5f4b">Data & Language Intelligence Lab</a> 
                   at <a href="https://www.yonsei.ac.kr/sc/index.jsp">Yonsei University</a>, 
                   advised by Professor <a href="https://donalee.github.io/">Dongha Lee</a>.
+                  My current research interest lies in real-world applications of Large Language Models (LLMs), especially in the area of Personalized Recommendation and Information Retrieval.
                 </p>
                 <p style="text-align:center">
                   <a href="mailto:hyunseo00@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
@@ -43,9 +44,9 @@
           <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
             <tr>
               <td style="padding:16px;width:100%;vertical-align:middle">
-                <h2>Research</h2>
+                <h2>Publications</h2>
                 <p>
-                  My current research interest lies in real-world applications of large language models (LLMs), especially in the area of Personalized Recommendation and Information Retrieval.
+                * denotes Equal Contribution.
                 </p>
               </td>
             </tr>
@@ -74,7 +75,7 @@
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <span class="papertitle">Pearl: A Review-driven Persona-Knowledge Grounded Conversational Recommendation Dataset</span><br/>
-                Minjin Kim, Minju Kim, Hana Kim, Beong-woo Kwak, Soyeon Chun, <strong>Hyunseo Kim</strong>, SeongKu Kang, Youngjae Yu, Jinyoung Yeo, Dongha Lee<br/>
+                Minjin Kim*, Minju Kim*, Hana Kim, Beong-woo Kwak, Soyeon Chun, <strong>Hyunseo Kim</strong>, SeongKu Kang, Youngjae Yu, Jinyoung Yeo, Dongha Lee<br/>
                 <em>ACL Findings</em>, 2024<br/>
                 <a href="https://arxiv.org/abs/2403.04460">Paper</a>
               </td>
