--- a/index.html
+++ b/index.html
@@ -65,6 +65,8 @@
                 Jieyong Kim*, <strong>Hyunseo Kim</strong>*, Hyunjin Cho, SeongKu Kang, Buru Chang, Jinyoung Yeo, Dongha Lee<br/>
                 <em>SIGIR</em>, 2025<br/>
                 <a href="https://arxiv.org/abs/2408.06276">Paper</a>
+                /
+                <a href="https://github.com/hyunseo318/EXP3RT" style="color: rgba(0, 0, 128, 0.668);">Code</a>
               </td>
             </tr>
 
@@ -78,6 +80,9 @@
                 Minjin Kim*, Minju Kim*, Hana Kim, Beong-woo Kwak, Soyeon Chun, <strong>Hyunseo Kim</strong>, SeongKu Kang, Youngjae Yu, Jinyoung Yeo, Dongha Lee<br/>
                 <em>ACL Findings</em>, 2024<br/>
                 <a href="https://arxiv.org/abs/2403.04460">Paper</a>
+                /
+                <a href="https://github.com/kkmjkim/PEARL" style="color: rgba(0, 0, 128, 0.668);">Code</a>
+
               </td>
             </tr>
 
