--- a/index.html
+++ b/index.html
@@ -66,7 +66,7 @@
                 <em>SIGIR</em>, 2025<br/>
                 <a href="https://arxiv.org/abs/2408.06276">Paper</a>
                 /
-                <a href="https://github.com/hyunseo318/EXP3RT" style="color: rgba(0, 0, 128, 0.668);">Code</a>
+                <a href="https://github.com/hyunseo318/EXP3RT">Code</a>
               </td>
             </tr>
 
@@ -81,7 +81,7 @@
                 <em>ACL Findings</em>, 2024<br/>
                 <a href="https://arxiv.org/abs/2403.04460">Paper</a>
                 /
-                <a href="https://github.com/kkmjkim/PEARL" style="color: rgba(0, 0, 128, 0.668);">Code</a>
+                <a href="https://github.com/kkmjkim/PEARL">Code</a>
 
               </td>
             </tr>
