--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <span class="papertitle">Review-driven Personalized Preference Reasoning with Large Language Models for Recommendation</span><br/>
-                <strong>Hyunseo Kim*</strong>,Jieyong Kim*, Hyunjin Cho, SeongKu Kang, Buru Chang, Jinyoung Yeo, Dongha Lee<br/>
+                <strong>Jieyong Kim*</strong>, Hyunseo Kim*, Hyunjin Cho, SeongKu Kang, Buru Chang, Jinyoung Yeo, Dongha Lee<br/>
                 <em>SIGIR</em>, 2025<br/>
                 <a href="https://arxiv.org/abs/2408.06276">Paper</a>
                 /
