--- a/index.html
+++ b/index.html
@@ -54,6 +54,20 @@
 
           <!-- Publications -->
           <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+             <!-- ICLR Paper -->
+            <tr>
+              <td style="padding:16px;width:20%;vertical-align:middle">
+                <img src="images/hyunseo/EXP3RT.png" width="160"/>
+              </td>
+              <td style="padding:8px;width:80%;vertical-align:middle">
+                <span class="papertitle">BESPOKE: Benchmark for Search-Augmented Large Language Model Personalization via Diagnostic Feedback</span><br/>
+                <strong>Hyunseo Kim*</strong>, Sangam Lee*, Kwangwook Seo, Dongha Lee<br/>
+                <em>Submitted to ICLR</em>, 2026<br/>
+                <a href="https://arxiv.org/abs/2408.06276">Paper</a>
+                /
+                <a href="https://github.com/hyunseo318/EXP3RT">Code</a>
+              </td>
+            </tr>  
             
             <!-- SIGIR Paper -->
             <tr>
