--- a/index.html
+++ b/index.html
@@ -57,7 +57,7 @@
              <!-- ICLR Paper -->
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/hyunseo/EXP3RT.png" width="160"/>
+                <img src="images/hyunseo/BESPOKE.png" width="160"/>
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <span class="papertitle">BESPOKE: Benchmark for Search-Augmented Large Language Model Personalization via Diagnostic Feedback</span><br/>
@@ -67,7 +67,7 @@
                 /
                 <a href="https://github.com/hyunseo318/EXP3RT">Code</a>
               </td>
-            </tr>  
+            </tr> 
             
             <!-- SIGIR Paper -->
             <tr>
@@ -101,6 +101,25 @@
             </tr>
 
             
+          </tbody></table>
+
+          <!-- Education Section -->
+          <table style="width:100%;border:0px;border-spacing:0px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:16px;width:100%;vertical-align:middle">
+                <h2>Education</h2>
+              </td>
+            </tr>
+          </tbody></table>
+
+          <table style="width:100%;border:0px;border-spacing:0px 10px;border-collapse:separate;margin-right:auto;margin-left:auto;"><tbody>
+            <tr>
+              <td style="padding:16px;width:100%;vertical-align:middle">
+                <strong>Yonsei University</strong>, Seoul, South Korea<br/>
+                <em>Master of Science in Computer Science</em>, 2023 - Present<br/>
+                <em>Bachelor of Science in Computer Science</em>, 2019 - 2023
+              </td>
+            </tr>
           </tbody></table>
 
           <!-- Footer -->
