--- a/index.html
+++ b/index.html
@@ -62,7 +62,7 @@
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <span class="papertitle">BESPOKE: Benchmark for Search-Augmented Large Language Model Personalization via Diagnostic Feedback</span><br/>
                 <strong>Hyunseo Kim*</strong>, Sangam Lee*, Kwangwook Seo, Dongha Lee<br/>
-                <em>Submitted to ICLR</em>, 2026<br/>
+                <em>Arxiv</em>, 2026<br/>
                 <a href="https://arxiv.org/abs/2408.06276">Paper</a>
                 /
                 <a href="https://github.com/hyunseo318/EXP3RT">Code</a>
