--- a/index.html
+++ b/index.html
@@ -57,13 +57,13 @@
              <!-- ICLR Paper -->
             <tr>
               <td style="padding:16px;width:20%;vertical-align:middle">
-                <img src="images/hyunseo/BESPOKE.png" width="160"/>
+                <img src="images/hyunseo/BESPOKE_method.png" width="160"/>
               </td>
               <td style="padding:8px;width:80%;vertical-align:middle">
                 <span class="papertitle">BESPOKE: Benchmark for Search-Augmented Large Language Model Personalization via Diagnostic Feedback</span><br/>
                 <strong>Hyunseo Kim*</strong>, Sangam Lee*, Kwangwook Seo, Dongha Lee<br/>
                 <em>Arxiv</em>, 2025<br/>
-                <a href="https://arxiv.org/abs/2408.06276">Paper</a>
+                <a href="https://arxiv.org/abs/2509.21106">Paper</a>
                 /
                 <a href="https://github.com/hyunseo318/EXP3RT">Code</a>
               </td>
