--- a/index.html
+++ b/index.html
@@ -21,7 +21,7 @@
                 <p class="name" style="text-align: center;">Hyunseo Kim</p>
                 <p>I'm a MS student in
                   <a href="https://diyonsei.notion.site/diyonsei/Data-Language-Intelligence-Lab-Yonsei-University-7e121249362f42c2bdd1328aeaeb5f4b">Data & Language Intelligence Lab</a> 
-                  at <a href="https://www.yonsei.ac.kr/sc/index.jsp">Yonsei University</a>, 
+                  at <a href="https://www.yonsei.ac.kr/sc/index.do">Yonsei University</a>, 
                   advised by Professor <a href="https://donalee.github.io/">Dongha Lee</a>.
                   My current research interest lies in real-world applications of Large Language Models (LLMs), especially in the area of Personalized Recommendation and Information Retrieval.
                 </p>
