--- a/index.html
+++ b/index.html
@@ -65,7 +65,9 @@
                 <em>Arxiv</em>, 2025<br/>
                 <a href="https://arxiv.org/abs/2509.21106">Paper</a>
                 /
-                <a href="https://github.com/hyunseo318/EXP3RT">Code</a>
+                <a href="https://github.com/hyunseo318/BESPOKE>Code</a>
+                /
+                <a href="https://huggingface.co/datasets/yonsei-dli/BESPOKE>Dataset</a>
               </td>
             </tr> 
             
