--- a/index.html
+++ b/index.html
@@ -29,7 +29,8 @@
                   <a href="mailto:hyunseo00@yonsei.ac.kr">Email</a> &nbsp;/&nbsp;
                   <a href="data/HyunseoKim-CV.pdf">CV</a> &nbsp;/&nbsp;
                   <a href="https://scholar.google.com/citations?hl=ko&user=L6zXr48AAAAJ">Scholar</a> &nbsp;/&nbsp;
-                  <a href="https://github.com/hyunseo318/">Github</a>
+                  <a href="https://github.com/hyunseo318/">Github</a> &nbsp;/&nbsp;
+                  <a href="https://www.linkedin.com/in/hyunseo-kim-086370321">LinkedIn</a>
                 </p>
               </td>
               <td style="padding:2.5%;width:37%;max-width:37%">
